# MobilityNebula

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile.runtime  MEOS_Python_Integration_Analysis.md  README.md  meos_test_data.txt  test_meos_intersects.cpp
Tests/: meos_contains.test  meos_intersects_temporal_geometry_string.test  temporal_sequence.test  temporal_sequence2.test  test_debug.test  test_debug2.test
Tests/Functions/: econtains_tgeo_geo.test  eintersects_test.test  eintersects_tgeo_linestring_polygon.test  externBoolContainsNumspanTnumber_geometry.test  externBoolContainsSetBigint_geometry.test  externBoolContainsSetDate_geometry.test  externBoolContainsSetFloat_geometry.test  externBoolContainsSetInt_geometry.test  externBoolContainsSetSet_geometry.test  externBoolContainsSetText_geometry.test  externBoolContainsSetTimestamptz_geometry.test  externBoolContainsSpanBigint_geometry.test  externBoolContainsSpanDate_geometry.test  externBoolContainsSpanFloat_geometry.test  externBoolContainsSpanInt_geometry.test  externBoolContainsSpanSpan_geometry.test  externBoolContainsSpanSpanset_geometry.test  externBoolContainsSpanTimestamptz_geometry.test  externBoolContainsSpansetBigint_geometry.test  externBoolContainsSpansetDate_geometry.test  externBoolContainsSpansetFloat_geometry.test  externBoolContainsSpansetInt_geometry.test  (+23 more)
nes-sql-parser/: AntlrSQL.g4  generated_parser_cases.cpp  generated_tokens.g4  integration_instructions.txt  required_includes.cpp
scripts/: CMakeLists.txt  generate-meos-function-from-json  generate-meos-function-from-json.cpp  meos-functions-excluded.json  meos-functions-filtered.json  meos-functions.json  parse-meos-functions  parse-meos-functions.cpp
scripts/templates/: AntlrGrammar.template  MEOSLogicalFunction.cpp.template  MEOSLogicalFunction.hpp.template  MEOSPhysicalFunction.cpp.template  MEOSPhysicalFunction.hpp.template  QueryPlanCreator.template
tools/: CMakeCache.txt
tools/meos-generator/: CMakeLists.txt  README.md
tools/meos-generator/include/: CodeGenerator.hpp  MeosFunctionDiscovery.hpp  TemplateEngine.hpp  Utils.hpp
tools/meos-generator/src/: CodeGenerator.cpp  MeosFunctionDiscovery.cpp  TemplateEngine.cpp  Utils.cpp  main.cpp
tools/meos-generator/templates/: logical_function_header.hpp.template  logical_function_impl.cpp.template  logical_function_registrar.inc.template  meos_wrapper_consolidated.cpp.template  meos_wrapper_consolidated.hpp.template  meos_wrapper_method.cpp.template  meos_wrapper_method.hpp.template  physical_function_header.hpp.template  physical_function_impl.cpp.template  physical_function_registrar.inc.template  sql_grammar_consolidated.g4.template  sql_grammar_token.template  sql_parser_case.template  sql_parser_consolidated.cpp.template  test_file.test.template
(+669 files in other folders)
